--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
     <meta property="og:title" content="Midnight Developer | Front-End Web Developer Portfolio">
     <meta property="og:description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
-    <meta property="og:image" content="./images/website-preview.png">
+    <meta property="og:image" content="https://midnight-developer-ts.github.io/personal-portfolio-project/images/website-preview.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://midnight-developer-ts.github.io/personal-portfolio-project/">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="./css/styles.css">
