minor improvements & updates

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </div>
           <div class="tools-column">
             <i class="fab fa-google"></i>
-            <p class="google-analytics">Google Analytics</p>
+            <p class="google-trends">Google Trends</p>
           </div>
           <div class="tools-column">
             <i class="fab fa-microsoft"></i>
@@ -137,27 +137,19 @@
           </div>
           <div class="tools-column">
             <i class="fas fa-robot"></i>
-            <p class="open-ai">Open AI</p>
-          </div>
-          <div class="tools-column">
-            <i class="fas fa-globe"></i>
-            <p class="wix">Wix</p>
+            <p class="chatgpt">ChatGPT</p>
           </div>
           <div class="tools-column">
             <i class="fas fa-globe"></i>
             <p class="hostinger">Hostinger</p>
           </div>
           <div class="tools-column">
-            <i class="fab fa-shopify"></i>
-            <p class="shopify">Shopify</p>
-          </div>
-          <div class="tools-column">
-            <i class="fas fa-server"></i>
-            <p class="ionos">Ionos</p>
-          </div>
-          <div class="tools-column">
             <i class="fas fa-palette"></i>
             <p class="canva">Canva</p>
+          </div>
+          <div class="tools-column">
+            <i class="fa-brands fa-figma"></i>
+            <p class="figma">Figma</p>
           </div>
         </div>
       </section>
@@ -166,9 +158,9 @@
         <h2 class="projects-header">Here are a few of my projects</h2>
         <div class="projects-grid">
           <div class="project-tile" title="Open the Product Landing Page Project">
-            <a class="product-landing-page" href="https://midnight-developer-ts.github.io/product-landing-page/" target="_blank" rel="noopener noreferrer">
-              <img src="./images/product-landing-page.png" alt="Product Landing Page" class="project-img">
-              <p class="projects-title">Product Landing Page</p>
+            <a class="band-website" href="https://intheshadowsband.com/" target="_blank" rel="noopener noreferrer">
+              <img src="./images/band-website-in-the-shadows.png" alt="Band Website In The Shadows Landing Page" class="project-img">
+              <p class="projects-title">Band Website | In The Shadows</p>
             </a>
           </div>
           <div class="project-tile" title="Open the Technical Documentation Page Project">
@@ -194,7 +186,7 @@
         <a class="btn contact-details" href="https://www.threads.com/@midnightdeveloper" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers Threads."><i class="fa-brands fa-threads"></i> Threads</a>
         <a class="btn contact-details" id="profile-link" href="https://www.facebook.com/profile.php?id=61579864044456" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers Facebook page."><i class="fab fa-facebook-square"></i> Facebook</a>
         <a class="btn contact-details" href="https://www.instagram.com/midnightdeveloper" title="Open Midnight Developers instagram."><i class="fa-brands fa-Instagram"></i> Instagram</a>
-        <a class="btn contact-details" href="https://www.linkedin.com/in/tiffany-schuman-midnight-developer-086364263/" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers LinkedIn."><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+        <a class="btn contact-details" href="https://www.linkedin.com/company/110738134/" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers LinkedIn."><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
       </section>
       <!-- Footer Section -->
       <footer>
