--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midnight Developer | Front-End Web Developer Portfolio</title>
-    <link rel="icon" type="image/png" href="./images/website-favicon.png">
+    <title>Midnight Developer's Personal Portfolio Project</title>
     <meta name="description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
-    <meta property="og:title" content="Midnight Developer | Front-End Web Developer Portfolio">
+    <!-- Favicon/Author/Site Name/Canonical -->
+    <link rel="icon" type="image/png" href="./img/website-favicon.png">
+    <meta name="author" content="Midnight Developer">
+    <meta property="og:site_name" content="Midnight Developer's Personal Portfolio Project">
+    <link rel="canonical" href="https://midnight-developer-ts.github.io/personal-portfolio-project/">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Midnight Developer's Personal Portfolio Project">
     <meta property="og:description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
-    <meta property="og:image" content="https://midnight-developer-ts.github.io/personal-portfolio-project/images/website-preview.png">
+    <meta property="og:image" content="https://midnight-developer-ts.github.io/personal-portfolio-project/img/website-preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://midnight-developer-ts.github.io/personal-portfolio-project/">
     <meta property="og:type" content="website">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Midnight Developer's Personal Portfolio Project">
+    <meta name="twitter:description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
+    <meta name="twitter:image" content="https://midnight-developer-ts.github.io/personal-portfolio-project/img/website-preview.png">
+    <!-- Styles/Fonts/Icons -->
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
