--- a/index.html
+++ b/index.html
@@ -170,19 +170,19 @@
         <div class="projects-grid">
           <div class="project-tile" title="Open the Product Landing Page Project">
             <a class="band-website" href="https://intheshadowsband.com/" target="_blank" rel="noopener noreferrer">
-              <img src="./images/band-website-in-the-shadows.png" alt="Band Website In The Shadows Landing Page" class="project-img">
+              <img src="./img/band-website-in-the-shadows.png" alt="Band Website In The Shadows Landing Page" class="project-img">
               <p class="projects-title">Band Website | In The Shadows</p>
             </a>
           </div>
           <div class="project-tile" title="Open the Technical Documentation Page Project">
             <a class="technical-documentation-page" href="https://midnight-developer-ts.github.io/technical-documentation-page/" target="_blank" rel="noopener noreferrer">
-              <img src="./images/technical-documentation-page.jpeg" alt="Technical Documentation Page" class="project-img">
+              <img src="./img/technical-documentation-page.jpeg" alt="Technical Documentation Page" class="project-img">
               <p class="projects-title">Technical Documentation Page</p>
             </a>
           </div>
           <div class="project-tile" title="Open the Survey Form Page Project">
             <a class="survey-form-page" href="https://midnight-developer-ts.github.io/survey-form/" target="_blank" rel="noopener noreferrer">
-              <img src="./images/survey-form-page.jpeg" alt="Survey Form Page" class="project-img">
+              <img src="./img/survey-form-page.jpeg" alt="Survey Form Page" class="project-img">
               <p class="projects-title">Survey Form Page</p>
             </a>
           </div>
