--- a/index.html
+++ b/index.html
@@ -82,17 +82,19 @@
       </nav>
       <!-- Welcome Section -->
       <section id="welcome-section" class="welcome-section">
+        <img src="./img/background-image.jpg" alt="Midnight Developer Logo" class="intro-img">
         <h1 class="intro-title">Hey there, im Midnight Developer</h1>
         <p class="intro-job">a front-end web developer</p>
       </section>
       <!-- About Section -->
       <section id="about-section" class="about-section">
+        <img src="./img/midnight-developer-profile-picture.jpg" alt="Midnight Developer's aka Tiffany's Profile Picture" class="about-img">
         <h2 class="about-title">About Midnight Developer</h2>
         <h3 class="about-subheader">Who I Am Behind The Code</h3>
-        <p class="about-text">Hey! I’m Tiffany Schuman, online and professionally, I go by Midnight Developer. I’m a front-end web developer and I'm working towards my full-stack certifications. I specialize in HTML, CSS, and JavaScript, combining creativity and technical skills together to build modern, unique, user-friendly websites.</p>
+        <p class="about-text">Hey! I’m Tiffany, professionally known online as Midnight Developer. I’m a front-end web developer currently working towards my Full-Stack certification. I specialize in HTML, CSS, and JavaScript, combining creativity and technical skills to build modern, user-friendly, and visually engaging websites.</p>
         <p class="about-text">My hands-on experience so far includes building and maintaining a band's website, as well as developing personal and class projects to practice and showcase my skills. While most of my work has been small-scale, I'm eager to collaborate with both small businesses and larger companies to deliver fast, accessible, and visually engaging websites.</p>
         <p class="about-text">Fueled by sweet tea and a love for problem-solving, turning tricky problems into organized, functional code. I’m committed to delivering results that help clients grow their online presence, and I'm always exploring new tech to improve my skills, my craft, and the online visuals that capture an audience.</p>
-        <p class="about-text">I have experience with e-commerce and CMS platforms including Shopify, Wix, Ionos, Hostinger, and eBay. I’ve also managed product listings, optimized content for SEO, embedded custom code, and maintained websites with timely updates, bug fixes, and new features as needed. Beyond development, I design logos, write SEO-driven content, and leverage AI tools to streamline workflows and enhance my coding solutions.</p>
+        <p class="about-text">I have experience with e-commerce and CMS platforms. My background includes working with Shopify, Wix, Ionos, Hostinger, and eBay. Where I've managed product listings, optimized SEO, embedded custom code, and maintained websites with updates, new features, and more. Beyond development, I design logos, write SEO-driven content, and leverage AI tools to streamline workflows and enhance my coding solutions.</p>
         <p class="about-text">Explore my projects to see what I’ve been building!</p>
       </section>
       <!-- Tech Stack Section -->
@@ -166,7 +168,7 @@
       </section>
       <!-- Projects Section -->
       <section id="projects" class="projects">
-        <h2 class="projects-header">Here are a few of my projects</h2>
+        <h2 class="projects-header">Top Projects</h2>
         <div class="projects-grid">
           <div class="project-tile" title="Open the Product Landing Page Project">
             <a class="band-website" href="https://intheshadowsband.com/" target="_blank" rel="noopener noreferrer">
@@ -192,11 +194,12 @@
       <!-- Contact Section -->
       <section id="contact" class="contact">
         <p class="contact-title">Let's work together...</p>
+        <p class="email">Email @: <span class="email-space">midnightdev.ts@gmail.com</span></p>
         <a class="btn contact-details" href="mailto:midnightdev.ts@gmail.com?subject=Portfolio%20Inquiry&body=Hi%20Midnight%20Developer," title="Send Midnight Developer an email."><i class="fas fa-at"></i> Send Email</a>
         <a class="btn contact-details" href="https://github.com/Midnight-Developer-ts" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers GitHub."><i class="fab fa-github"></i> GitHub</a>
         <a class="btn contact-details" href="https://www.threads.com/@midnightdeveloper" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers Threads."><i class="fa-brands fa-threads"></i> Threads</a>
         <a class="btn contact-details" id="profile-link" href="https://www.facebook.com/profile.php?id=61579864044456" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers Facebook page."><i class="fab fa-facebook-square"></i> Facebook</a>
-        <a class="btn contact-details" href="https://www.instagram.com/midnightdeveloper" title="Open Midnight Developers instagram."><i class="fa-brands fa-Instagram"></i> Instagram</a>
+        <a class="btn contact-details" href="https://www.instagram.com/midnightdeveloper" title="Open Midnight Developers instagram."><i class="fa-brands fa-instagram"></i> Instagram</a>
         <a class="btn contact-details" href="https://www.linkedin.com/company/110738134/" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers LinkedIn."><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
       </section>
       <!-- Footer Section -->
