--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midnight Developer's Personal Portfolio Project</title>
-    <meta name="description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
+    <title>Vynxcode's Personal Portfolio Project</title>
+    <meta name="description" content="Portfolio of Vynxcode, a front-end web developer specializing in HTML, CSS, and JavaScript.">
     <!-- Favicon/Author/Site Name/Canonical -->
     <link rel="icon" type="image/png" href="./img/website-favicon.png">
-    <meta name="author" content="Midnight Developer">
-    <meta property="og:site_name" content="Midnight Developer's Personal Portfolio Project">
-    <link rel="canonical" href="https://midnight-developer-ts.github.io/personal-portfolio-project/">
+    <meta name="author" content="Vynxcode">
+    <meta property="og:site_name" content="Vynxcode's Personal Portfolio Project">
+    <link rel="canonical" href="https://vynxcode.github.io/personal-portfolio-project/">
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Midnight Developer's Personal Portfolio Project">
-    <meta property="og:description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
-    <meta property="og:image" content="https://midnight-developer-ts.github.io/personal-portfolio-project/img/website-preview.png">
+    <meta property="og:title" content="Vynxcode's Personal Portfolio Project">
+    <meta property="og:description" content="Portfolio of Vynxcode, a front-end web developer specializing in HTML, CSS, and JavaScript.">
+    <meta property="og:image" content="https://vynxcode.github.io/personal-portfolio-project/img/website-preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://midnight-developer-ts.github.io/personal-portfolio-project/">
+    <meta property="og:url" content="https://vynxcode.github.io/personal-portfolio-project/">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Midnight Developer's Personal Portfolio Project">
-    <meta name="twitter:description" content="Portfolio of Midnight Developer, a front-end web developer specializing in HTML, CSS, and JavaScript.">
-    <meta name="twitter:image" content="https://midnight-developer-ts.github.io/personal-portfolio-project/img/website-preview.png">
+    <meta name="twitter:title" content="Vynxcode's Personal Portfolio Project">
+    <meta name="twitter:description" content="Portfolio of Vynxcode, a front-end web developer specializing in HTML, CSS, and JavaScript.">
+    <meta name="twitter:image" content="https://vynxcode.github.io/personal-portfolio-project/img/website-preview.png">
     <!-- Styles/Fonts/Icons -->
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
   <body>
       <!-- Nav Bar / Header -->
       <nav id="navbar" class="nav">
-        <a class="logo" href="index.html">Midnight Developer</a>
+        <a class="logo" href="index.html">Vynxcode</a>
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="hamburger" title="menu">
           <i class="fas fa-bars"></i>
@@ -82,16 +82,16 @@
       </nav>
       <!-- Welcome Section -->
       <section id="welcome-section" class="welcome-section">
-        <img src="./img/background-image.jpg" alt="Midnight Developer Logo" class="intro-img">
-        <h1 class="intro-title">Hey there, im Midnight Developer</h1>
+        <img src="./img/background-image.jpg" alt="Vynxcode Logo" class="intro-img">
+        <h1 class="intro-title">Hey there, im Vynxcode</h1>
         <p class="intro-job">a front-end web developer</p>
       </section>
       <!-- About Section -->
       <section id="about-section" class="about-section">
-        <img src="./img/midnight-developer-profile-picture.jpg" alt="Midnight Developer's aka Tiffany's Profile Picture" class="about-img">
-        <h2 class="about-title">About Midnight Developer</h2>
+        <img src="./img/vynxcode-profile-picture.jpg" alt="Vynxcode's aka Tiffany's Profile Picture" class="about-img">
+        <h2 class="about-title">About Vynxcode</h2>
         <h3 class="about-subheader">Who I Am Behind The Code</h3>
-        <p class="about-text">Hey! I’m Tiffany, professionally known online as Midnight Developer. I’m a front-end web developer currently working towards my Full-Stack certification. I specialize in HTML, CSS, and JavaScript, combining creativity and technical skills to build modern, user-friendly, and visually engaging websites.</p>
+        <p class="about-text">Hey! I’m Tiffany, professionally known online as Vynxcode. I’m a front-end web developer currently working towards my Full-Stack certification. I specialize in HTML, CSS, and JavaScript, combining creativity and technical skills to build modern, user-friendly, and visually engaging websites.</p>
         <p class="about-text">My hands-on experience so far includes building and maintaining a band's website, as well as developing personal and class projects to practice and showcase my skills. While most of my work has been small-scale, I'm eager to collaborate with both small businesses and larger companies to deliver fast, accessible, and visually engaging websites.</p>
         <p class="about-text">Fueled by sweet tea and a love for problem-solving, turning tricky problems into organized, functional code. I’m committed to delivering results that help clients grow their online presence, and I'm always exploring new tech to improve my skills, my craft, and the online visuals that capture an audience.</p>
         <p class="about-text">I have experience with e-commerce and CMS platforms. My background includes working with Shopify, Wix, Ionos, Hostinger, and eBay. Where I've managed product listings, optimized SEO, embedded custom code, and maintained websites with updates, new features, and more. Beyond development, I design logos, write SEO-driven content, and leverage AI tools to streamline workflows and enhance my coding solutions.</p>
@@ -177,37 +177,37 @@
             </a>
           </div>
           <div class="project-tile" title="Open the Technical Documentation Page Project">
-            <a class="technical-documentation-page" href="https://midnight-developer-ts.github.io/technical-documentation-page/" target="_blank" rel="noopener noreferrer">
+            <a class="technical-documentation-page" href="https://vynxcode.github.io/technical-documentation-page/" target="_blank" rel="noopener noreferrer">
               <img src="./img/technical-documentation-page.jpeg" alt="Technical Documentation Page" class="project-img">
               <p class="projects-title">Technical Documentation Page</p>
             </a>
           </div>
           <div class="project-tile" title="Open the Survey Form Page Project">
-            <a class="survey-form-page" href="https://midnight-developer-ts.github.io/survey-form/" target="_blank" rel="noopener noreferrer">
+            <a class="survey-form-page" href="https://vynxcode.github.io/survey-form/" target="_blank" rel="noopener noreferrer">
               <img src="./img/survey-form-page.jpeg" alt="Survey Form Page" class="project-img">
               <p class="projects-title">Survey Form Page</p>
             </a>
           </div>
         </div>
-        <a class="more-btn" href="https://github.com/Midnight-Developer-ts?tab=repositories" target="_blank" rel="noopener noreferrer" type="button">View More Projects On GitHub</a>
+        <a class="more-btn" href="https://github.com/vynxcode-ts?tab=repositories" target="_blank" rel="noopener noreferrer" type="button">View More Projects On GitHub</a>
       </section>
       <!-- Contact Section -->
       <section id="contact" class="contact">
         <p class="contact-title">Let's work together...</p>
-        <p class="email">Email @: <span class="email-space">midnightdev.ts@gmail.com</span></p>
-        <a class="btn contact-details" href="mailto:midnightdev.ts@gmail.com?subject=Portfolio%20Inquiry&body=Hi%20Midnight%20Developer," title="Send Midnight Developer an email."><i class="fas fa-at"></i> Send Email</a>
-        <a class="btn contact-details" href="https://github.com/Midnight-Developer-ts" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers GitHub."><i class="fab fa-github"></i> GitHub</a>
-        <a class="btn contact-details" href="https://www.threads.com/@midnightdeveloper" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers Threads."><i class="fa-brands fa-threads"></i> Threads</a>
-        <a class="btn contact-details" id="profile-link" href="https://www.facebook.com/profile.php?id=61579864044456" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers Facebook page."><i class="fab fa-facebook-square"></i> Facebook</a>
-        <a class="btn contact-details" href="https://www.instagram.com/midnightdeveloper" title="Open Midnight Developers instagram."><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a class="btn contact-details" href="https://www.linkedin.com/company/110738134/" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers LinkedIn."><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+        <p class="email">Email @: <span class="email-space">vynxcode@gmail.com</span></p>
+        <a class="btn contact-details" href="mailto:vynxcode@gmail.com?subject=Portfolio%20Inquiry&body=Hi%20Vynxcode," title="Send Vynxcode's an email."><i class="fas fa-at"></i> Send Email</a>
+        <a class="btn contact-details" href="https://github.com/vynxcode-ts" target="_blank" rel="noopener noreferrer" title="Open Vynxcode's GitHub."><i class="fab fa-github"></i> GitHub</a>
+        <a class="btn contact-details" href="https://www.threads.com/@vynxcode" target="_blank" rel="noopener noreferrer" title="Open Vynxcode's Threads."><i class="fa-brands fa-threads"></i> Threads</a>
+        <a class="btn contact-details" id="profile-link" href="https://www.facebook.com/profile.php?id=61579864044456" target="_blank" rel="noopener noreferrer" title="Open Vynxcode's Facebook page."><i class="fab fa-facebook-square"></i> Facebook</a>
+        <a class="btn contact-details" href="https://www.instagram.com/vynxcode" title="Open Vynxcode's instagram."><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a class="btn contact-details" href="https://www.linkedin.com/company/vynxcode/" target="_blank" rel="noopener noreferrer" title="Open Vynxcode's LinkedIn."><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
       </section>
       <!-- Footer Section -->
       <footer>
-          <span class="footer-dev">© 2025 | ♥ Designed By <a href="https://linktr.ee/midnightdeveloper" target="_blank" rel="noopener noreferrer" title="Open Midnight Developers Linktree to view all info.">Midnight Developer</a></span>
+          <span class="footer-dev">© 2025 | ♥ Designed By <a href="https://linktr.ee/vynxcode" target="_blank" rel="noopener noreferrer" title="Open Vynxcode's Linktree to view all info.">Vynxcode</a></span>
       </footer>
   </body>
-  <!-- Copyright © 2026 Midnight Developer (Tiffany Schuman) All Rights Reserved. 
-   Licensed under the Midnight Developer Proprietary License. 
+  <!-- Copyright © 2026 Vynxcode (Tiffany Schuman) All Rights Reserved. 
+   Licensed under the Vynxcode Proprietary License. 
    See LICENSE for details --> 
 </html>
