--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vynxcode's Personal Portfolio Project</title>
     <meta name="description" content="Portfolio of Vynxcode, a front-end web developer specializing in HTML, CSS, and JavaScript.">
     <!-- Favicon/Author/Site Name/Canonical -->
-    <link rel="icon" type="image/png" href="./img/website-favicon.png">
+    <link rel="icon" type="image/svg+xml" href="./img/website-favicon.svg">
     <meta name="author" content="Vynxcode">
     <meta property="og:site_name" content="Vynxcode's Personal Portfolio Project">
     <link rel="canonical" href="https://vynxcode.github.io/personal-portfolio-project/">
