--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Portfolio of Vynxcode, a front-end web developer specializing in HTML, CSS, and JavaScript.">
     <!-- Favicon/Author/Site Name/Canonical -->
     <link rel="icon" type="image/svg+xml" href="./img/website-favicon.svg">
-    <meta name="author" content="Vynxcode">
+    <meta name="author" content="Tiffany Schuman, doing business as Vynxcode">
     <meta property="og:site_name" content="Vynxcode's Personal Portfolio Project">
     <link rel="canonical" href="https://vynxcode.github.io/personal-portfolio-project/">
     <!-- Open Graph Meta Tags -->
@@ -207,7 +207,7 @@
           <span class="footer-dev">© 2025 | ♥ Designed By <a href="https://linktr.ee/vynxcode" target="_blank" rel="noopener noreferrer" title="Open Vynxcode's Linktree to view all info.">Vynxcode</a></span>
       </footer>
   </body>
-  <!-- Copyright © 2026 Vynxcode (Tiffany Schuman) All Rights Reserved. 
+  <!-- Copyright © 2026 Tiffany Schuman, doing business as Vynxcode All Rights Reserved. 
    Licensed under the Vynxcode Proprietary License. 
    See LICENSE for details --> 
 </html>
